# qsosed

./: .gitignore  .travis.yml  README.md  asd  constants.py  paper_plots.ipynb  plot_disk.ipynb  requirements.txt  sed.ipynb  sed.py  setup.cfg  setup.py  tests.ipynb  xspec_original.py
agnsed/: original.py  xspec_routines.py
agnsed/.ipynb_checkpoints/: sed-checkpoint.py
pyagn/: sed.py
qsosed/: cloudy.py  constants.py  plotting.py  sed.py  xspec_routines.py
test/: test_warm.py
tests/: test_corona.py  test_disc.py  test_disk.py  test_fractions.py  test_global.py  test_warm.py  test_xspec_routines.py
