# setup.cfg
[bdist_wheel]
universal=1

[metadata]
name = qsosed 

author = Arnau Quera-Bofarull

author_email = arnau.quera-bofarull@durham.ac.uk

summary = A physical model for SED of QSO. 

license = GPL

description-file =
    README.md

home-page = https://github.com/arnauqb/qwind

python_requires = >=3.6
